# zenit

./: .coveragerc  .env.example  README.md  conftest.py  pyproject.toml  pytest.ini
accounts/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
ai/: admin.py  models.py  urls.py  views.py
ai/agents/: __init__.py  financial_analyst.py  tools.py
ai/migrations/: 0001_initial.py
ai/templatetags/: ai_tags.py
ai/tests/: test_agent.py  test_models.py  test_tools.py  test_views.py
categories/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
categories/management/commands/: seed_categories.py
categories/migrations/: 0001_initial.py
core/: settings.py  urls.py  views.py
profiles/: models.py  signals.py  tests.py  urls.py  views.py
profiles/migrations/: 0001_initial.py
reports/: urls.py  views.py
templates/: home.html
templates/accounts/: confirm_delete.html  form.html  list.html
templates/auth/: login.html  register.html
templates/base/: layout.html
templates/categories/: confirm_delete.html  form.html  list.html
templates/dashboard/: index.html
templates/profiles/: detail.html  update.html
templates/reports/: index.html
templates/transactions/: confirm_delete.html  form.html  list.html
transactions/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
transactions/migrations/: 0001_initial.py
users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
