[project]
name = "zenit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dj-database-url>=3.1.2",
    "django>=6.0.4",
    "langchain>=1.2.15",
    "langchain-openai>=1.1.12",
    "markdown>=3.10.2",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "reportlab>=4.4.10",
]

[dependency-groups]
dev = [
    "coverage>=7.13.5",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.12.0",
]
